Fix buttons visibility + imporve buttons UI + allow to listen to submit event and prevent it

--- a/packages/formoj/scss/components/_button.scss
+++ b/packages/formoj/scss/components/_button.scss
@@ -4,4 +4,7 @@
   > .fj-icon:first-child {
     margin-right: .25em;
   }
+  > .fj-icon:last-child {
+    margin-left: .375em;
+  }
 }
